About us page finished

--- a/about-us.html
+++ b/about-us.html
@@ -19,7 +19,7 @@
 
   <body>
     <header></header>
-    <main class="main">
+    <main class="main main--about-us">
       <p class="page-description page-description--about-us">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -30,7 +30,177 @@
         mollit anim id est laborum
       </p>
       <section class="info-articles">
-          
+        <div class="article">
+          <div class="article__img">
+            <img
+              src="./styles/img/depositphotos_290666204-stock-photo-happy-asian-teen-passenger-listening.png"
+              alt="article img"
+            />
+            <svg
+              class="article__svg-stroke"
+              width="286"
+              height="385"
+              viewBox="0 0 367 400"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M362.103 134.044C351.766 70.0263 304.733 29.7485 252.111 11.9123C201.664 -5.18686 143.817 5.17731 94.6929 43.5335C47.0051 80.7686 14.8446 141.3 5.42439 204.862C-3.48572 264.982 13.7537 321.332 47.7533 359.392C79.2739 394.677 126.115 401.842 173.635 393.418C221.318 384.965 267.329 360.042 300.578 314.277C339.298 260.982 372.028 195.506 362.103 134.044ZM253.075 9.07107C306.438 27.1588 354.503 68.1614 365.065 133.566C375.194 196.29 341.805 262.635 303.005 316.04C269.256 362.493 222.531 387.796 174.158 396.371C126.101 404.891 78.0043 397.758 45.516 361.39C10.8777 322.615 -6.57352 265.353 2.4568 204.422C11.9724 140.216 44.4642 78.9463 92.8466 41.1689C142.677 2.26119 201.567 -8.38749 253.075 9.07107Z"
+                fill="#3483C7"
+              />
+            </svg>
+          </div>
+          <div class="article__content">
+            <h3 class="article__title">Title</h3>
+            <p class="article__desc">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque ab
+              perferendis unde dolore velit officia corrupti consectetur hic
+              quibusdam corporis repellendus, reprehenderit aperiam iusto!
+            </p>
+            <div class="show-more-btn-container">
+              <object class="show-more-svg show-more-svg--small" data="./styles/img/show-more-btn-small.svg" type="image/svg+xml"></object>
+              <button class="show-more-btn show-more-btn--small"></button>
+            </div>
+          </div>
+        </div>
+        <div class="article">
+          <div class="article__img">
+            <img
+              src="./styles/img/depositphotos_353828110-stock-photo-elegant-young-couple-ballroom-dancers.png"
+              alt="article img"
+            />
+            <svg
+              class="article__svg-stroke"
+              width="286"
+              height="385"
+              viewBox="0 0 367 400"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M362.103 134.044C351.766 70.0263 304.733 29.7485 252.111 11.9123C201.664 -5.18686 143.817 5.17731 94.6929 43.5335C47.0051 80.7686 14.8446 141.3 5.42439 204.862C-3.48572 264.982 13.7537 321.332 47.7533 359.392C79.2739 394.677 126.115 401.842 173.635 393.418C221.318 384.965 267.329 360.042 300.578 314.277C339.298 260.982 372.028 195.506 362.103 134.044ZM253.075 9.07107C306.438 27.1588 354.503 68.1614 365.065 133.566C375.194 196.29 341.805 262.635 303.005 316.04C269.256 362.493 222.531 387.796 174.158 396.371C126.101 404.891 78.0043 397.758 45.516 361.39C10.8777 322.615 -6.57352 265.353 2.4568 204.422C11.9724 140.216 44.4642 78.9463 92.8466 41.1689C142.677 2.26119 201.567 -8.38749 253.075 9.07107Z"
+                fill="#3483C7"
+              />
+            </svg>
+          </div>
+          <div class="article__content">
+            <h3 class="article__title">Title</h3>
+            <p class="article__desc">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque ab
+              perferendis unde dolore velit officia corrupti consectetur hic
+              quibusdam corporis repellendus, reprehenderit aperiam iusto!
+            </p>
+            <div class="show-more-btn-container">
+              <object class="show-more-svg show-more-svg--small" data="./styles/img/show-more-btn-small.svg" type="image/svg+xml"></object>
+              <button class="show-more-btn show-more-btn--small"></button>
+            </div>
+          </div>
+        </div>
+        <div class="article">
+          <div class="article__img">
+            <img
+              src="./styles/img/depositphotos_5589774-stock-photo-couple-dancing.png"
+              alt="article img"
+            />
+            <svg
+              class="article__svg-stroke"
+              width="286"
+              height="385"
+              viewBox="0 0 367 400"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M362.103 134.044C351.766 70.0263 304.733 29.7485 252.111 11.9123C201.664 -5.18686 143.817 5.17731 94.6929 43.5335C47.0051 80.7686 14.8446 141.3 5.42439 204.862C-3.48572 264.982 13.7537 321.332 47.7533 359.392C79.2739 394.677 126.115 401.842 173.635 393.418C221.318 384.965 267.329 360.042 300.578 314.277C339.298 260.982 372.028 195.506 362.103 134.044ZM253.075 9.07107C306.438 27.1588 354.503 68.1614 365.065 133.566C375.194 196.29 341.805 262.635 303.005 316.04C269.256 362.493 222.531 387.796 174.158 396.371C126.101 404.891 78.0043 397.758 45.516 361.39C10.8777 322.615 -6.57352 265.353 2.4568 204.422C11.9724 140.216 44.4642 78.9463 92.8466 41.1689C142.677 2.26119 201.567 -8.38749 253.075 9.07107Z"
+                fill="#3483C7"
+              />
+            </svg>
+          </div>
+          <div class="article__content">
+            <h3 class="article__title">Title</h3>
+            <p class="article__desc">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque ab
+              perferendis unde dolore velit officia corrupti consectetur hic
+              quibusdam corporis repellendus, reprehenderit aperiam iusto!
+            </p>
+            <div class="show-more-btn-container">
+              <object class="show-more-svg show-more-svg--small" data="./styles/img/show-more-btn-small.svg" type="image/svg+xml"></object>
+              <button class="show-more-btn show-more-btn--small"></button>
+            </div>
+          </div>
+        </div>
+        <div class="article">
+          <div class="article__img">
+            <img src="./styles/img/Layer11.png" alt="article img" />
+            <svg
+              class="article__svg-stroke"
+              width="286"
+              height="385"
+              viewBox="0 0 367 400"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M362.103 134.044C351.766 70.0263 304.733 29.7485 252.111 11.9123C201.664 -5.18686 143.817 5.17731 94.6929 43.5335C47.0051 80.7686 14.8446 141.3 5.42439 204.862C-3.48572 264.982 13.7537 321.332 47.7533 359.392C79.2739 394.677 126.115 401.842 173.635 393.418C221.318 384.965 267.329 360.042 300.578 314.277C339.298 260.982 372.028 195.506 362.103 134.044ZM253.075 9.07107C306.438 27.1588 354.503 68.1614 365.065 133.566C375.194 196.29 341.805 262.635 303.005 316.04C269.256 362.493 222.531 387.796 174.158 396.371C126.101 404.891 78.0043 397.758 45.516 361.39C10.8777 322.615 -6.57352 265.353 2.4568 204.422C11.9724 140.216 44.4642 78.9463 92.8466 41.1689C142.677 2.26119 201.567 -8.38749 253.075 9.07107Z"
+                fill="#3483C7"
+              />
+            </svg>
+          </div>
+          <div class="article__content">
+            <h3 class="article__title">Title</h3>
+            <p class="article__desc">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque ab
+              perferendis unde dolore velit officia corrupti consectetur hic
+              quibusdam corporis repellendus, reprehenderit aperiam iusto!
+            </p>
+            <div class="show-more-btn-container">
+              <object class="show-more-svg show-more-svg--small" data="./styles/img/show-more-btn-small.svg" type="image/svg+xml"></object>
+              <button class="show-more-btn show-more-btn--small"></button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="awards">
+        <h2 class="awards__title">Awards</h2>
+        <div class="carousel-container">
+          <div class="card-carousel">
+            <div class="card-item" id="1">
+              <div class="image-container"></div>
+              <h3 class="card-title">Dance Award1</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+            </div>
+            <div class="card-item" id="2">
+              <div class="image-container"></div>
+              <h3 class="card-title">Dance Award2</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+            </div>
+            <div class="card-item" id="3">
+              <div class="image-container"></div>
+              <h3 class="card-title">Dance Award3</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+            </div>  
+            <div class="card-item" id="4">
+              <div class="image-container"></div>
+              <h3 class="card-title">Dance Award4</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+            </div>
+            <div class="card-item" id="5">
+              <div class="image-container"></div>
+              <h3 class="card-title">Dance Award5</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+            </div>
+          </div>
+          <a href="#" class="visuallyhidden card-controller">Carousel controller</a>
+        </div>
+
       </section>
     </main>
     <footer class="footer"></footer>
@@ -53,6 +223,7 @@
     ></script>
     <!--custom scripts-->
     <script src="./template.js" type="text/javascript"></script>
+    <script src="./carousel.js" type="text/javascript"></script>
     <script defer>
       insertHeaderTemplate("./styles/img/maxresdefault.png");
       insertFooterTemplate();
