--- a/coaches.html
+++ b/coaches.html
@@ -69,8 +69,8 @@
         </div>
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="prev-btn"
-          id="slider-btn prev-btn"
+          class="slider-btn prev-btn"
+          id="prev-btn"
           width="56.898"
           height="91"
           viewBox="0 0 56.898 91"
@@ -96,9 +96,9 @@
           />
         </svg>
         <div class="trail">
-          <div class="trail__item">1</div>
-          <div class="trail__item">2</div>
-          <div class="trail__item">3</div>
+          <div class="trail__item first-slide">1</div>
+          <div class="trail__item second-slide">2</div>
+          <div class="trail__item third-slide">3</div>
         </div>
       </div>
       <p class="page-description page-description--coaches">
