feedback form added

--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
     <script defer>
       insertHeaderTemplate('./styles/img/elite-dance-studio-ballroom-dance-costume_1.png');
       insertFooterTemplate();
+      insertModalForm();
     </script>
+    <script src="./showModalForm.js"></script>
   </body>
 </html>
