--- a/about-us.html
+++ b/about-us.html
@@ -15,6 +15,8 @@
       @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;1,100&family=Schoolbell&display=swap");
     </style>
     <title>MamasitaDance</title>
+    <link rel="shortcut icon" href="./styles/img/Layer11.png" type="image/x-icon">
+
   </head>
 
   <body>
@@ -222,8 +224,8 @@
       crossorigin="anonymous"
     ></script>
     <!--custom scripts-->
-    <script src="./template.js" type="text/javascript"></script>
-    <script src="./carousel.js" type="text/javascript"></script>
+    <script src="./scripts/template.js" type="text/javascript"></script>
+    <script src="./scripts/carousel.js" type="text/javascript"></script>
     <script defer>
       insertHeaderTemplate("./styles/img/maxresdefault.png");
       insertFooterTemplate();
