--- a/coaches.html
+++ b/coaches.html
@@ -15,6 +15,8 @@
       @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;1,100&family=Schoolbell&display=swap");
     </style>
     <title>MamasitaDance</title>
+    <link rel="shortcut icon" href="./styles/img/Layer11.png" type="image/x-icon">
+
   </head>
 
   <body>
@@ -135,12 +137,12 @@
 
     <!--custom scripts-->
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
-    <script src="./template.js" type="text/javascript"></script>
+    <script src="./scripts/template.js" type="text/javascript"></script>
     <script defer>
       insertHeaderTemplate("./styles/img/banner-coaches.png");
       insertFooterTemplate();
       insertTeacherCards(3);
     </script>
-    <script src="./slider.js"></script>
+    <script src="./scripts/slider.js"></script>
   </body>
 </html>
