--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Latina Dance School in Odessa, Ukraine. Personal or Groups trainings for juniors and adults"/>
     <link rel="stylesheet" href="./styles/main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -15,6 +16,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;1,100&family=Schoolbell&display=swap");
     </style>
     <title>MamasitaDance</title>
+    <link rel="shortcut icon" href="./styles/img/Layer11.png" type="image/x-icon">
   </head>
 
   <body>
@@ -117,12 +119,12 @@
       crossorigin="anonymous"
     ></script>
     <!--custom scripts-->
-    <script src="./template.js" type="text/javascript"></script>
+    <script src="./scripts/template.js" type="text/javascript"></script>
     <script defer>
       insertHeaderTemplate('./styles/img/elite-dance-studio-ballroom-dance-costume_1.png');
       insertFooterTemplate();
       insertModalForm();
     </script>
-    <script src="./showModalForm.js"></script>
+    <script src="./scripts/showModalForm.js"></script>
   </body>
 </html>
