Added setter of active class for nav btns

--- a/coaches.html
+++ b/coaches.html
@@ -142,6 +142,7 @@
       insertHeaderTemplate("./styles/img/banner-coaches.png");
       insertFooterTemplate();
       insertTeacherCards(3);
+      setActiveNavBtn();
     </script>
     <script src="./scripts/slider.js"></script>
   </body>
