Changing img extension

--- a/about-us.html
+++ b/about-us.html
@@ -227,7 +227,7 @@
     <script src="./scripts/template.js" type="text/javascript"></script>
     <script src="./scripts/carousel.js" type="text/javascript"></script>
     <script defer>
-      insertHeaderTemplate("./styles/img/maxresdefault.png");
+      insertHeaderTemplate("./styles/img/maxresdefault.webp");
       insertFooterTemplate();
     </script>
   </body>
