--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!--custom scripts-->
     <script src="./scripts/template.js" type="text/javascript"></script>
     <script defer>
-      insertHeaderTemplate('./styles/img/elite-dance-studio-ballroom-dance-costume_1.png');
+      insertHeaderTemplate('./styles/img/elite-dance-studio-ballroom-dance-costume_1.webp');
       insertFooterTemplate();
       insertModalForm();
     </script>
