--- a/coaches.html
+++ b/coaches.html
@@ -139,7 +139,7 @@
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
     <script src="./scripts/template.js" type="text/javascript"></script>
     <script defer>
-      insertHeaderTemplate("./styles/img/banner-coaches.png");
+      insertHeaderTemplate("./styles/img/banner-coaches.webp");
       insertFooterTemplate();
       insertTeacherCards(3);
       setActiveNavBtn();
